--- a/Frontend/www/assets/css/index.css
+++ b/Frontend/www/assets/css/index.css
@@ -6,9 +6,11 @@
 html, body {
     width: 100%;
     height: 100%;
+    font-family: 'Open Sans', sans-serif;
 }
 
 /** Constants Declaration */
+
 :root {
     --main-box-width: 77%;
     --top-logo-width: 100px;
@@ -17,6 +19,12 @@ html, body {
     --side-box-top-element-height: 95px;
     --side-box-bottom-element-height: calc(1.25 * var(--side-box-top-element-height));
     --side-box-content-height: calc(100% - var(--side-box-top-element-height) - var(--side-box-bottom-element-height));
+
+    /* Colours */
+    --main-white: rgb(235, 235, 235);
+    --lighter-grey: rgb(185, 185, 185);
+    --hot-orange: rgb(253, 171, 18);
+    --lighter-black: rgb(55, 55, 55);
 }
 
 /** Main Page Layout */
@@ -48,7 +56,7 @@ header {
     width: var(--main-box-width);
     height: 100px;
     box-sizing: border-box;
-    background-color: black;
+    background-color: var(--lighter-black);
 
     /* Internal styles */
     display: flex;
@@ -56,16 +64,33 @@ header {
 }
 
 section.top-logo {
+    box-sizing: border-box;
+    padding: 15px 0px;
     width: var(--top-logo-width);
     min-width: var(--top-logo-width);
     height: 100%; /* Later use ~125%? */
-    background-color: orange;
+    background-color: var(--hot-orange);
+}
+
+section.top-logo > span {
+    display: flex;
+    justify-content: center;
+    color: var(--main-white);
+    font-weight: 600;
+}
+
+section.top-logo > span.first {
+    font-size: 20px;
+}
+
+section.top-logo > span.second {
+    font-size: 22px;
 }
 
 section.info-box {
     /* Self */
     width: calc(100% - var(--top-logo-width));
-    background-color: yellow; /* Subject to change */
+    background-color: var(--lighter-black);
 
     /* Internal styles */
     display: flex;
@@ -84,6 +109,27 @@ section.info-box-item {
     align-items: center; /* Alternatively, use padding */
 }
 
+section.item-data-wrapper > span {
+    /* Self? */
+    
+    /* Internal styles */
+    display: flex;
+    align-items: end;
+    color: var(--lighter-grey);
+}
+
+section.item-data-wrapper > span.first {
+    font-size: 18px;
+} 
+
+section.item-data-wrapper > span.second {
+    font-size: 12px;
+} 
+
+section.item-data-wrapper > span.third {
+    font-size: 15px;
+}
+
 section.top-info, section.item-data-wrapper {
     /* Self? */
     
@@ -93,15 +139,16 @@ section.top-info, section.item-data-wrapper {
 }
 
 section.top-info > button {
-    /* Self */
     height: 90%;
     margin-top: 5px;
     margin-bottom: 2px;
-    border: 1px solid black;
-    border-radius: 4px;
-
-    /* Internal styles */
     padding: 0px 20px;
+    font-size: 16px;
+}
+
+section.bottom-info {
+    font-size: 16px;
+    color: var(--main-white);
 }
 
 /** Side Box Styles */
@@ -135,7 +182,7 @@ section.side-box-item-wrapper > section.item {
 
 section.side-box > section.bottom-element {
     height: var(--side-box-bottom-element-height);
-    background-color: whitesmoke;
+    background-color: var(--main-white);
 }
 
 section.total-price-wrapper {
@@ -155,7 +202,7 @@ section.total-price-wrapper > span {
     padding: 0px 10px;
 }
 
-section.buy-button-wrapper {
+section.buy-btn-wrapper {
     /* Self? */
 
     /* Internal styles */
@@ -165,17 +212,23 @@ section.buy-button-wrapper {
     padding: 20px 10px;
 }
 
-button.buy-button {
+button.buy-btn {
     padding: 5px 15px;
-    border: 1px solid black;
-    border-radius: 4px;
 }
 
 /** Auxiliary Styles */
 .uses-tborder {
-    border-top: 1px solid black; /* Color is subject to change */
+    border-top: 1px solid var(--lighter-grey);
 }
 
 .uses-large-rmargin {
     margin-right: 20px;
+}
+
+.orange-btn {
+    border: 1px solid black;
+    border-radius: 4px;
+    background-color: var(--hot-orange);
+    color: var(--main-white);
+    font-weight: 600;
 }
