--- a/Frontend/www/assets/css/index.css
+++ b/Frontend/www/assets/css/index.css
@@ -12,6 +12,7 @@ html, body {
 /** Constants Declaration */
 
 :root {
+    /* Header */
     --top-logo-width: 100px;
 
     /* Side Box */
@@ -20,19 +21,24 @@ html, body {
     --side-box-bottom-element-height: calc(1.25 * var(--side-box-top-element-height));
     --side-box-content-height: calc(100% - var(--side-box-top-element-height) - var(--side-box-bottom-element-height));
 
+    /* Main Box */
     --main-box-width: calc(100% - var(--side-box-min-width));
 
     /* Colours */
     --main-white: rgb(235, 235, 235);
     --lighter-grey: rgb(185, 185, 185);
     --hot-orange: rgb(253, 171, 18);
-    --lighter-black: rgb(55, 55, 55);
     --main-grey: rgb(128, 128, 128);
-    --side-box-grey: rgb(205, 205, 205);
+    --side-box-grey: rgb(220, 220, 220);
+    --button-orange-hover: rgb(228, 126, 0);
     --button-green: rgb(0, 182, 0);
+    --button-green-hover: rgb(8, 145, 8);
     --button-red: rgb(220, 0, 0);
     --button-red-border: rgb(183, 0, 0);
+    --button-red-hover: rgb(174, 19, 19);
+    --button-white-hover: rgb(230, 202, 170);
     --label-orange: rgb(223, 123, 1);
+    --main-beige: rgb(246, 246, 231);
 }
 
 /** Main Page Layout */
@@ -45,7 +51,7 @@ section.main-box {
     width: var(--main-box-width);
     height: inherit;
     float: left;
-    background-color: forestgreen;
+    background-color: var(--main-beige);
 }
 
 section.side-box {
@@ -65,7 +71,8 @@ header {
     width: var(--main-box-width);
     height: 100px;
     box-sizing: border-box;
-    background-color: var(--lighter-black);
+    background-color: black;
+    opacity: 80%;
 
     /* Internal styles */
     display: flex;
@@ -77,7 +84,7 @@ section.top-logo {
     padding: 15px 0px;
     width: var(--top-logo-width);
     min-width: var(--top-logo-width);
-    height: 100%; /* Later use ~125%? */
+    height: 100%;
     background-color: var(--hot-orange);
 }
 
@@ -99,7 +106,7 @@ section.top-logo > span.second {
 section.info-box {
     /* Self */
     width: calc(100% - var(--top-logo-width));
-    background-color: var(--lighter-black);
+    background-color: black;
 
     /* Internal styles */
     display: flex;
@@ -115,7 +122,7 @@ section.info-box-item {
     /* Internal styles */
     display: flex;
     flex-direction: row;
-    align-items: center; /* Alternatively, use padding */
+    align-items: center;
 }
 
 section.item-data-wrapper > span {
@@ -351,7 +358,18 @@ button.buy-btn {
     font-weight: 600;
 }
 
-.btn {
+.orange-btn:hover {
+    background-color: var(--button-orange-hover);
+	transition: 0.5s ease-in-out all;
+}
+
+.orange-btn:active {
+    background-color: var(--main-white);
+    color: darkorange;
+    transition: 0.15s ease-out all;
+}
+
+.circular-btn {
     color: var(--main-white);
     font-size: 16px;
     font-weight: 600;
@@ -365,10 +383,26 @@ button.buy-btn {
     margin-left: 5px;
 }
 
+.green-btn:hover {
+    background-color: var(--button-green-hover);
+	transition: 0.5s ease-in-out all;
+}
+
 .red-btn {
     background-color: var(--button-red);
     border: 2px solid var(--button-red-border);
     margin-right: 5px;
+}
+
+.red-btn:hover {
+    background-color: var(--button-red-hover);
+	transition: 0.5s ease-in-out all;  
+}
+
+.red-btn:active, .green-btn:active {
+    border: 2px solid var(--side-box-grey);
+	background-color: var(--hot-orange);
+	transition: 0.15s ease-out all;
 }
 
 .white-btn {
@@ -376,4 +410,16 @@ button.buy-btn {
     background-color: var(--main-white);
     border: 2px solid var(--lighter-grey);
     margin-left: 15px;
+}
+
+.white-btn:hover {
+    background-color: var(--button-white-hover);
+	transition: 0.5s ease-in-out all;
+}
+
+.white-btn:active {
+    border: 2px solid var(--side-box-grey);
+    background-color: var(--hot-orange);
+    color: var(--main-white);
+    transition: 0.15s ease-out all;
 }
